tests/checker/diagnostics/0672_fcm_pack_tuple_type_mismatch_02.ml.infer.expected
File "0672_fcm_pack_tuple_type_mismatch_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0672_fcm_pack_tuple_type_mismatch_02 is not a valid module name.

File "0672_fcm_pack_tuple_type_mismatch_02.ml", line 11, characters 16-22:
11 | let _ = (module M_beta : Cell_beta with type t = bool * bool)
                     ^^^^^^
Error: This expression has type (module Cell_beta with type t = bool * bool)
       but an expression was expected of type
         (module Cell_beta with type t = M_beta.t)
       Type bool * bool is not compatible with type M_beta.t = int * int
       Type bool is not compatible with type int
